--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,63 @@
-#div1 {
-  background-image: url("https://picsum.photos/id/237/200/300");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
+.image:nth-child(1) {
+    background-image: url("https://picsum.photos/id/237/200/300?v=1");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
 }
 
-#div2 {
-  background-image: url("https://picsum.photos/seed/picsum/200/300");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
+.image:nth-child(2) {
+    background-image: url("https://picsum.photos/seed/picsum/200/300?v=2");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
 }
 
-#div3 {
-  background-image: url("https://picsum.photos/200/300?grayscale");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
+.image:nth-child(3) {
+    background-image: url("https://picsum.photos/200/300?grayscale?v=3");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
 }
 
-#div4 {
-  background-image: url("https://picsum.photos/200/300/");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
+.image:nth-child(4) {
+    background-image: url("https://picsum.photos/200/300/?v=4");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
 }
 
-#div5 {
-  background-image: url("https://picsum.photos/200/300.jpg");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
+.image:nth-child(5) {
+    background-image: url("https://picsum.photos/200/300.jpg?v=5");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
 }
 
-#div6 {
-  background-image: url("https://picsum.photos/id/102/200/300");
-  height: 300px;
-  width: 200px;
-  margin: 20px;
+.image:nth-child(6) {
+    background-image: url("https://picsum.photos/id/102/200/300?v=6");
+    height: 300px;
+    width: 200px;
+    margin: 20px;
 }
 
 div.container {
-  border: 5px solid #555;
+    border: 5px solid #555;
 }
 
 .flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .selected {
-  border: 5px solid rgb(0, 195, 255);
+    border: 5px solid rgb(0, 195, 255);
 }
 
 p {
-  text-align: center;
+    text-align: center;
 }
 
 button {
-  margin: 20px;
+    margin: 20px;
 }
